Subtraction_Game/Subtraction_GameParser.py
# Generated from Subtraction_Game.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class Subtraction_GameParser ( Parser ):

    grammarFileName = "Subtraction_Game.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'domain'", "'problem'", "'define'", "'agentid'", 
                     "'constants'", "'type'", "'predicates'", "'action'", 
                     "'event'", "'events'", "'pldegree'", "'eventmodel'", 
                     "'parameters'", "'tercondition'", "'precondition'", 
                     "'response'", "'observation'", "'min'", "'max'", "'numbers'", 
                     "'normal'", "'miser'", "'effect'", "'object'", "'increase'", 
                     "'decrease'", "'assign'", "'agent'", "'either'", "'objects'", 
                     "'init'", "'goal'", "'('", "')'", "'['", "']'", "':'", 
                     "'?'", "'.'", "'_'", "'-'", "'+'", "'*'", "'/'", "'='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'and'", "'or'", 
                     "'not'", "'oneof'", "'imply'", "'forall'", "'exists'", 
                     "'when'" ]

    symbolicNames = [ "<INVALID>", "DOMAIN", "PROBLEM", "DEFINE", "AGENTID", 
                      "CONST", "TYPE", "PREDICATE", "ACTION", "EVENT", "EVENTS", 
                      "PLDEGREE", "EVENTMODEL", "PARAMETER", "TERCONDITION", 
                      "PRECONDITION", "RESPONSE", "OBSERVATION", "MIN", 
                      "MAX", "NUMS", "NORMAL", "MISER", "EFFECT", "OBJECT", 
                      "INC", "DEC", "ASSGIN", "AGENT", "EITHER", "OBJS", 
                      "INIT", "GOAL", "LB", "RB", "LSB", "RSB", "COLON", 
                      "QM", "POINT", "UL", "MINUS", "PLUS", "MULT", "DIV", 
                      "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", "AND", "OR", 
                      "NOT", "ONEOF", "IMPLY", "FORALL", "EXISTS", "WHEN", 
                      "NAME", "INTEGER", "VAR", "FUNSYM", "WS" ]

    RULE_domain = 0
    RULE_objectDefine = 1
    RULE_numericDefine = 2
    RULE_numericSymbol = 3
    RULE_typeDefine = 4
    RULE_terconditionDefine = 5
    RULE_predicateDefine = 6
    RULE_atomFormSkeleton = 7
    RULE_predicate = 8
    RULE_typeDeclaration = 9
    RULE_type = 10
    RULE_actionDefine = 11
    RULE_actionSymbol = 12
    RULE_emptyOrPreGD = 13
    RULE_emptyOrEffect = 14
    RULE_listName = 15
    RULE_listVariable = 16
    RULE_oneofDefine = 17
    RULE_gd = 18
    RULE_termAtomForm = 19
    RULE_termLiteral = 20
    RULE_constTerm = 21
    RULE_term = 22
    RULE_effect = 23
    RULE_assignop = 24
    RULE_pEffect = 25
    RULE_problemName = 26
    RULE_domainName = 27
    RULE_agentDefine = 28
    RULE_objectDeclaration = 29
    RULE_numericSetting = 30
    RULE_init = 31
    RULE_constTermAtomForm = 32

    ruleNames =  [ "domain", "objectDefine", "numericDefine", "numericSymbol", 
                   "typeDefine", "terconditionDefine", "predicateDefine", 
                   "atomFormSkeleton", "predicate", "typeDeclaration", "type", 
                   "actionDefine", "actionSymbol", "emptyOrPreGD", "emptyOrEffect", 
                   "listName", "listVariable", "oneofDefine", "gd", "termAtomForm", 
                   "termLiteral", "constTerm", "term", "effect", "assignop", 
                   "pEffect", "problemName", "domainName", "agentDefine", 
                   "objectDeclaration", "numericSetting", "init", "constTermAtomForm" ]

    EOF = Token.EOF
    DOMAIN=1
    PROBLEM=2
    DEFINE=3
    AGENTID=4
    CONST=5
    TYPE=6
    PREDICATE=7
    ACTION=8
    EVENT=9
    EVENTS=10
    PLDEGREE=11
    EVENTMODEL=12
    PARAMETER=13
    TERCONDITION=14
    PRECONDITION=15
    RESPONSE=16
    OBSERVATION=17
    MIN=18
    MAX=19
    NUMS=20
    NORMAL=21
    MISER=22
    EFFECT=23
    OBJECT=24
    INC=25
    DEC=26
    ASSGIN=27
    AGENT=28
    EITHER=29
    OBJS=30
    INIT=31
    GOAL=32
    LB=33
    RB=34
    LSB=35
    RSB=36
    COLON=37
    QM=38
    POINT=39
    UL=40
    MINUS=41
    PLUS=42
    MULT=43
    DIV=44
    EQ=45
    NEQ=46
    LT=47
    LEQ=48
    GT=49
    GEQ=50
    AND=51
    OR=52
    NOT=53
    ONEOF=54
    IMPLY=55
    FORALL=56
    EXISTS=57
    WHEN=58
    NAME=59
    INTEGER=60
    VAR=61
    FUNSYM=62
    WS=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(Subtraction_GameParser.LB)
            else:
                return self.getToken(Subtraction_GameParser.LB, i)

        def DEFINE(self):
            return self.getToken(Subtraction_GameParser.DEFINE, 0)

        def DOMAIN(self):
            return self.getToken(Subtraction_GameParser.DOMAIN, 0)

        def NAME(self):
            return self.getToken(Subtraction_GameParser.NAME, 0)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(Subtraction_GameParser.RB)
            else:
                return self.getToken(Subtraction_GameParser.RB, i)

        def objectDefine(self):
            return self.getTypedRuleContext(Subtraction_GameParser.ObjectDefineContext,0)


        def typeDefine(self):
            return self.getTypedRuleContext(Subtraction_GameParser.TypeDefineContext,0)


        def terconditionDefine(self):
            return self.getTypedRuleContext(Subtraction_GameParser.TerconditionDefineContext,0)


        def actionDefine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Subtraction_GameParser.ActionDefineContext)
            else:
                return self.getTypedRuleContext(Subtraction_GameParser.ActionDefineContext,i)


        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomain" ):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = Subtraction_GameParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(Subtraction_GameParser.LB)
            self.state = 67
            self.match(Subtraction_GameParser.DEFINE)
            self.state = 68
            self.match(Subtraction_GameParser.LB)
            self.state = 69
            self.match(Subtraction_GameParser.DOMAIN)
            self.state = 70
            self.match(Subtraction_GameParser.NAME)
            self.state = 71
            self.match(Subtraction_GameParser.RB)
            self.state = 72
            self.objectDefine()
            self.state = 73
            self.typeDefine()
            self.state = 74
            self.terconditionDefine()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Subtraction_GameParser.LB:
                self.state = 75
                self.actionDefine()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(Subtraction_GameParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def COLON(self):
            return self.getToken(Subtraction_GameParser.COLON, 0)

        def OBJS(self):
            return self.getToken(Subtraction_GameParser.OBJS, 0)

        def listVariable(self):
            return self.getTypedRuleContext(Subtraction_GameParser.ListVariableContext,0)


        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_objectDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectDefine" ):
                listener.enterObjectDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectDefine" ):
                listener.exitObjectDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectDefine" ):
                return visitor.visitObjectDefine(self)
            else:
                return visitor.visitChildren(self)




    def objectDefine(self):

        localctx = Subtraction_GameParser.ObjectDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_objectDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(Subtraction_GameParser.LB)
            self.state = 84
            self.match(Subtraction_GameParser.COLON)
            self.state = 85
            self.match(Subtraction_GameParser.OBJS)
            self.state = 86
            self.listVariable()
            self.state = 87
            self.match(Subtraction_GameParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumericDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def COLON(self):
            return self.getToken(Subtraction_GameParser.COLON, 0)

        def NUMS(self):
            return self.getToken(Subtraction_GameParser.NUMS, 0)

        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def numericSymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Subtraction_GameParser.NumericSymbolContext)
            else:
                return self.getTypedRuleContext(Subtraction_GameParser.NumericSymbolContext,i)


        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_numericDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericDefine" ):
                listener.enterNumericDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericDefine" ):
                listener.exitNumericDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumericDefine" ):
                return visitor.visitNumericDefine(self)
            else:
                return visitor.visitChildren(self)




    def numericDefine(self):

        localctx = Subtraction_GameParser.NumericDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_numericDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(Subtraction_GameParser.LB)
            self.state = 90
            self.match(Subtraction_GameParser.COLON)
            self.state = 91
            self.match(Subtraction_GameParser.NUMS)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.numericSymbol()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Subtraction_GameParser.NAME):
                    break

            self.state = 97
            self.match(Subtraction_GameParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumericSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Subtraction_GameParser.NAME, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_numericSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericSymbol" ):
                listener.enterNumericSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericSymbol" ):
                listener.exitNumericSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumericSymbol" ):
                return visitor.visitNumericSymbol(self)
            else:
                return visitor.visitChildren(self)




    def numericSymbol(self):

        localctx = Subtraction_GameParser.NumericSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_numericSymbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(Subtraction_GameParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def COLON(self):
            return self.getToken(Subtraction_GameParser.COLON, 0)

        def TYPE(self):
            return self.getToken(Subtraction_GameParser.TYPE, 0)

        def NORMAL(self):
            return self.getToken(Subtraction_GameParser.NORMAL, 0)

        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def MISER(self):
            return self.getToken(Subtraction_GameParser.MISER, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_typeDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDefine" ):
                listener.enterTypeDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDefine" ):
                listener.exitTypeDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDefine" ):
                return visitor.visitTypeDefine(self)
            else:
                return visitor.visitChildren(self)




    def typeDefine(self):

        localctx = Subtraction_GameParser.TypeDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeDefine)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(Subtraction_GameParser.LB)
                self.state = 102
                self.match(Subtraction_GameParser.COLON)
                self.state = 103
                self.match(Subtraction_GameParser.TYPE)
                self.state = 104
                self.match(Subtraction_GameParser.NORMAL)
                self.state = 105
                self.match(Subtraction_GameParser.RB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(Subtraction_GameParser.LB)
                self.state = 107
                self.match(Subtraction_GameParser.COLON)
                self.state = 108
                self.match(Subtraction_GameParser.TYPE)
                self.state = 109
                self.match(Subtraction_GameParser.MISER)
                self.state = 110
                self.match(Subtraction_GameParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerconditionDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def COLON(self):
            return self.getToken(Subtraction_GameParser.COLON, 0)

        def TERCONDITION(self):
            return self.getToken(Subtraction_GameParser.TERCONDITION, 0)

        def emptyOrPreGD(self):
            return self.getTypedRuleContext(Subtraction_GameParser.EmptyOrPreGDContext,0)


        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_terconditionDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerconditionDefine" ):
                listener.enterTerconditionDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerconditionDefine" ):
                listener.exitTerconditionDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerconditionDefine" ):
                return visitor.visitTerconditionDefine(self)
            else:
                return visitor.visitChildren(self)




    def terconditionDefine(self):

        localctx = Subtraction_GameParser.TerconditionDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_terconditionDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(Subtraction_GameParser.LB)
            self.state = 114
            self.match(Subtraction_GameParser.COLON)
            self.state = 115
            self.match(Subtraction_GameParser.TERCONDITION)
            self.state = 116
            self.emptyOrPreGD()
            self.state = 117
            self.match(Subtraction_GameParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def COLON(self):
            return self.getToken(Subtraction_GameParser.COLON, 0)

        def PREDICATE(self):
            return self.getToken(Subtraction_GameParser.PREDICATE, 0)

        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def atomFormSkeleton(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Subtraction_GameParser.AtomFormSkeletonContext)
            else:
                return self.getTypedRuleContext(Subtraction_GameParser.AtomFormSkeletonContext,i)


        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_predicateDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateDefine" ):
                listener.enterPredicateDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateDefine" ):
                listener.exitPredicateDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicateDefine" ):
                return visitor.visitPredicateDefine(self)
            else:
                return visitor.visitChildren(self)




    def predicateDefine(self):

        localctx = Subtraction_GameParser.PredicateDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_predicateDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(Subtraction_GameParser.LB)
            self.state = 120
            self.match(Subtraction_GameParser.COLON)
            self.state = 121
            self.match(Subtraction_GameParser.PREDICATE)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.atomFormSkeleton()
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Subtraction_GameParser.LB):
                    break

            self.state = 127
            self.match(Subtraction_GameParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomFormSkeletonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def predicate(self):
            return self.getTypedRuleContext(Subtraction_GameParser.PredicateContext,0)


        def listVariable(self):
            return self.getTypedRuleContext(Subtraction_GameParser.ListVariableContext,0)


        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def oneofDefine(self):
            return self.getTypedRuleContext(Subtraction_GameParser.OneofDefineContext,0)


        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_atomFormSkeleton

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomFormSkeleton" ):
                listener.enterAtomFormSkeleton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomFormSkeleton" ):
                listener.exitAtomFormSkeleton(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomFormSkeleton" ):
                return visitor.visitAtomFormSkeleton(self)
            else:
                return visitor.visitChildren(self)




    def atomFormSkeleton(self):

        localctx = Subtraction_GameParser.AtomFormSkeletonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atomFormSkeleton)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(Subtraction_GameParser.LB)
            self.state = 130
            self.predicate()
            self.state = 131
            self.listVariable()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Subtraction_GameParser.ONEOF:
                self.state = 132
                self.oneofDefine()


            self.state = 135
            self.match(Subtraction_GameParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Subtraction_GameParser.NAME, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = Subtraction_GameParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(Subtraction_GameParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Subtraction_GameParser.NAME, 0)

        def LB(self):
            return self.getToken(Subtraction_GameParser.LB, 0)

        def constTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Subtraction_GameParser.ConstTermContext)
            else:
                return self.getTypedRuleContext(Subtraction_GameParser.ConstTermContext,i)


        def RB(self):
            return self.getToken(Subtraction_GameParser.RB, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = Subtraction_GameParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeDeclaration)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Subtraction_GameParser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(Subtraction_GameParser.NAME)
                pass
            elif token in [Subtraction_GameParser.LB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(Subtraction_GameParser.LB)
                self.state = 141
                self.match(Subtraction_GameParser.NAME)
                self.state = 142
                self.constTerm()
                self.state = 143
                self.constTerm()
                self.state = 144
                self.match(Subtraction_GameParser.RB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT(self):
            return self.getToken(Subtraction_GameParser.OBJECT, 0)

        def AGENT(self):
            return self.getToken(Subtraction_GameParser.AGENT, 0)

        def NAME(self):
            return self.getToken(Subtraction_GameParser.NAME, 0)

        def getRuleIndex(self):
            return Subtraction_GameParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = Subtraction_GameParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Subtraction_GameParser.OBJECT) | (1 << Subtraction_GameParser.AGENT) | (1 << Subtraction_GameParser.NAME))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(Subtraction_GameParser.LB)
            else:
                return self.getToken(Subtraction_GameParser.LB, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(Subtraction_GameParser.COLON)
            else:
                return self.getToken(Subtraction_GameParser.COLON, i)
